# Embedded-Linux

./: .main.c.swp  Capslock.c  README.md  a.out  main.c  myprintf.c  myprintf.s  print  receiver  receiver.c  script.sh
AdminLinux_task1/: script.sh
TASK2/: script.sh
TASK4/: myprintf.s  sender  sender.c
TASK5/: TCP_CLIENT.py  TCP_SERVER.py
TASK6/: README.md
TASK7/: gpio.cpp  gpio.h  main  main.cpp
TASK8/: generate_temp  generate_temp.cpp  main  main.cpp  mian  mian.c  test  test.cpp
TASK9/: CMakeLists.txt
TASK9/app/: main.cpp
TASK9/include/: CMakeLists.txt  sevensegment.hpp
TASK9/source/: CMakeLists.txt  sevensegment.cpp
board/raspberrypi3-64/: config_3_64bit.txt  fix-permissions.sh
board/raspberrypi3-64/rootfs_overlay/etc/init.d/: S99qtapp
kernal_init_busybox_vexpress/: boot.cmd  boot.scr  rootramfs.cpio
kernal_panic_vexpress/: README.md  boot.cmd
package/iti-gpio/: CMakeLists.txt  iti-gpio.mk
qt6-calculator-rpi3/package/iti-gpio/: Config.in  main.cpp
